2003-07-29  Motoya Kurotsu  <kurotsu@allied-telesis.co.jp>

        * src/dhcp_prot.c (do_dhcp): (re)Initialize the lease when
        dhcp is (re)initialized or retried.
        Return true when the state falls into DHCPSTATE_NOTBOUND so that it 
        knows the interface it still up and can later bring it down when 
        cleaning up.

2003-07-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/ipv6_routing_thread.c: Fix compiler warnings
	* cd/net.cdl: The routing thread needs the posix package.

2003-07-24  Nick Garnett  <nickg@balti.calivar.com>

	* src/dhcp_prot.c: Added a declaration for cyg_arc4random() to
	eliminate a compiler warning.

2003-07-15  Nick Garnett  <nickg@balti.calivar.com>

	* include/net/netdb.h: Added include for <sys/param.h>. the in.h
	file included later needs this.

2003-05-23  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* src/network_support.c (init_all_network_interfaces): Allow IPv4
 	or IPv6 addresses to be used when configuring a default DNS
 	server.
 
2003-05-21  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/getaddrinfo.c (getaddrinfo): Corrected a bad patch merge
	from earlier which failed to delete some code. This fixed the dns1
	tests for IPv6 lookups.

2003-05-19  Michael Checky  <Michael_Checky@ThermoKing.com>
            Andrew Lunn     <andrew.lunn@ascom.ch>
	
	* src/getaddrinfo.c: Changed '#ifdef CYGPKG_NS_DNS' to
	'#ifdef CYGPKG_NS_DNS_BUILD', so it would compile if this CDL
	option is not selected.  Changed the call to 'numeric_node_addr'
	so it uses the correct number of arguments.

2003-05-14  Bob Holmberg  <bob_holmberg@yahoo.com>

	* src/tftp_server.c (tftpd_read_file): Open the file for reading,
	not writing.

2003-05-09  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/ifaddrs.c (getifaddrs): Fill in flags, netmask and broadcast
	addresses, for both IPv4 and IPv6 and enabled.
	* src/ipv6_routing_thread.c (ipv6_start_routing_thread): Only
	start the thread once. 

2003-04-26  Andrew Lunn  <andrew.lunn@ascom.ch>
